--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,6 +6,7 @@
   padding: 48px 40px 10px 40px;
   border-bottom: 2px solid #dadada;
   .manage-panel {
+    display: flex;
     .btn-blue {
       background: #0271c7;
       color: #f2f2f2;
@@ -89,4 +90,18 @@
   border: 1px solid #cccccc;
   background: #ffffff;
   color: #969696;
+}
+
+.add-form {
+  margin-top: 10px;
+  padding: 20px;
+  background: #fff;
+  border: 1px solid #ccc;
+  height: 60px;
+  width: 260px;
+  box-shadow: -1px 1px 3px #bbb;
+  border-radius: 3px;
+  position: absolute;
+  z-index: 2;
+  top: 70px;
 }
