--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,3 +1,16 @@
+@mixin form($width) {
+  margin-top: 10px;
+  padding: 20px;
+  background: #ffffff;
+  border: 1px solid #cccccc;
+  min-height: 60px;
+  width: $width;
+  box-shadow: -1px 1px 3px #bbbbbb;
+  border-radius: 3px;
+  position: absolute;
+  z-index: 2;
+}
+
 .header {
   display: flex;
   justify-content: space-between;
@@ -5,7 +18,8 @@
   height: 32px;
   padding: 48px 40px 10px 40px;
   border-bottom: 2px solid #dadada;
-  .manage-panel {
+  position: relative;
+  #manage-panel {
     display: flex;
     .btn-blue {
       background: #0271c7;
@@ -18,20 +32,20 @@
       }
     }
   }
-  .search-panel {
-    display: flex;
+  #search-panel {
     .icon {
       background: url(../icons/svg/magnifying-glass.svg) no-repeat;
       width: 20px;
       display: inline-block;
       vertical-align: middle;
     }
-    .search {
+    .search-panel__input {
       height: 22px;
       width: 180px;
       border-radius: 3px;
-      border-top: 2px solid #c7c7c7;
+      border: 1px solid #c7c7c7;
       padding: 0 10px;
+      outline: none;
     }
   }
 }
@@ -43,9 +57,7 @@
     width: 16px;
     height: 16px;
     vertical-align: middle;
-    color: transparent;
     font-size: 8px;
-    justify-content: center;
   }
   .btn-prev {
     background: url(../icons/svg/play-button-reverse.svg) no-repeat;
@@ -58,19 +70,17 @@
     color: #555555;
     vertical-align: middle;
     display: inline-block;
-    width: 100px;
+    width: 120px;
     text-align: center;
   }
-}
-
-.calendar-body {
-  padding: 8px 40px 10px 40px;
 }
 
 .container {
   margin: 0 auto;
   width: 1140px;
 }
+
+// Button styles
 
 .btn {
   height: 24px;
@@ -92,16 +102,127 @@
   color: #969696;
 }
 
+.btn-close {
+  display: block;
+  cursor: pointer;
+  color: #bbbbbb;
+  position: absolute;
+  right: 5px;
+  top: 5px;
+  width: 14px;
+  height: 14px;
+  font-size: 12px;
+  text-align: center;
+  line-height: 14px;
+}
+
 .add-form {
+  @include form(260px);
+  top: 75px;
+}
+
+.search-panel__results {
+  display: none;
+  @include form(180px);
+  text-align: left;
+  top: 75px;
+  line-height: 1.2;
+  right: 20px;
+}
+
+table,
+tr,
+td {
+  border: 1px solid #dddddd;
+  border-spacing: 0px;
+}
+tbody {
+  display: table-row-group;
+  vertical-align: middle;
+  border-color: inherit;
+}
+table {
+  width: 100%;
+}
+tr {
+  height: 100px;
+}
+
+th,
+td {
+  vertical-align: top;
+  padding: 6px;
+  font-size: 10px;
+  color: #aaaaaa;
+  width: 14%;
+  cursor: pointer;
+}
+
+th {
+  text-align: left;
+}
+td {
+  position: relative;
+}
+td.active {
+  background: #c2e4fe;
+  position: relative;
+}
+td.last {
+  background: #efefef;
+  position: relative;
+}
+td.active.edit {
+  outline: 2px solid #2196f3;
+}
+td:hover {
+  background: #eeeeee;
+}
+td.current {
+  background: #f4f4f4;
+}
+
+.add-form-advanced,
+.add-form-edit {
   margin-top: 10px;
   padding: 20px;
-  background: #fff;
-  border: 1px solid #ccc;
-  height: 60px;
+  background: #ffffff;
+  border: 1px solid #cccccc;
   width: 260px;
-  box-shadow: -1px 1px 3px #bbb;
+  box-shadow: -1px 1px 3px #bbbbbb;
   border-radius: 3px;
   position: absolute;
+  right: -320px;
+  top: -32px;
   z-index: 2;
-  top: 70px;
+}
+
+.add-form > input,
+.add-form-advanced > input {
+  width: 260px;
+  margin-bottom: 10px;
+  height: 22px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+}
+
+.add-form-advanced > textarea,
+.add-form-edit > textarea {
+  width: 260px;
+  margin-bottom: 10px;
+  height: 60px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+}
+
+.add-form > button {
+  height: 22px;
+}
+
+#calendar-body {
+  padding: 8px 40px 10px 40px;
+}
+
+#table {
+  position: relative;
 }
