--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -135,6 +135,10 @@ q:after {
   content: none;
 }
 
+hr {
+  background: #dadada;
+}
+
 table {
   border-collapse: collapse;
   border-spacing: 0;
