--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -31,11 +31,16 @@
         color: #ffffff;
       }
     }
+    .add-form {
+      @include form(260px);
+      top: 75px;
+    }
   }
   #search-panel {
     .icon {
       background: url(../icons/svg/magnifying-glass.svg) no-repeat;
       width: 20px;
+      height: 25px;
       display: inline-block;
       vertical-align: middle;
     }
@@ -46,6 +51,14 @@
       border: 1px solid #c7c7c7;
       padding: 0 10px;
       outline: none;
+    }
+    .search-panel__results {
+      display: none;
+      @include form(180px);
+      text-align: left;
+      top: 75px;
+      line-height: 1.2;
+      right: 20px;
     }
   }
 }
@@ -116,20 +129,6 @@
   line-height: 14px;
 }
 
-.add-form {
-  @include form(260px);
-  top: 75px;
-}
-
-.search-panel__results {
-  display: none;
-  @include form(180px);
-  text-align: left;
-  top: 75px;
-  line-height: 1.2;
-  right: 20px;
-}
-
 table,
 tr,
 td {
@@ -197,26 +196,27 @@ td.current {
   z-index: 2;
 }
 
-.add-form > input,
-.add-form-advanced > input {
+.add-form p,
+.add-form-edit p,
+.add-form-edit h3 {
+  margin-bottom: 20px;
+}
+.add-form input,
+.add-form-advanced input {
   width: 260px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   height: 22px;
   border: 1px solid #ccc;
   border-radius: 3px;
 }
 
-.add-form-advanced > textarea,
-.add-form-edit > textarea {
+.add-form-advanced textarea,
+.add-form-edit textarea {
   width: 260px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   height: 60px;
   border: 1px solid #ccc;
   border-radius: 3px;
-}
-
-.add-form > button {
-  height: 22px;
 }
 
 #calendar-body {
