--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -11,124 +11,6 @@
   z-index: 2;
 }
 
-.header {
-  display: flex;
-  justify-content: space-between;
-  background: #f3f3f3;
-  height: 32px;
-  padding: 48px 40px 10px 40px;
-  border-bottom: 2px solid #dadada;
-  position: relative;
-  #manage-panel {
-    display: flex;
-    .btn-blue {
-      background: #0271c7;
-      color: #f2f2f2;
-      box-shadow: 1px 1px 1px #0068c1;
-      text-shadow: 1px 1px 2px #005094;
-      &:hover {
-        background: #0261c7;
-        color: #ffffff;
-      }
-    }
-    .add-form {
-      @include form(260px);
-      top: 75px;
-    }
-  }
-  #search-panel {
-    .icon {
-      background: url(../icons/svg/magnifying-glass.svg) no-repeat;
-      width: 20px;
-      height: 25px;
-      display: inline-block;
-      vertical-align: middle;
-    }
-    .search-panel__input {
-      height: 22px;
-      width: 180px;
-      border-radius: 3px;
-      border: 1px solid #c7c7c7;
-      padding: 0 10px;
-      outline: none;
-    }
-    .search-panel__results {
-      display: none;
-      @include form(180px);
-      text-align: left;
-      top: 75px;
-      line-height: 1.2;
-      right: 20px;
-    }
-  }
-}
-
-.calendar-date {
-  padding: 20px 0 20px;
-  .btn-prev,
-  .btn-next {
-    width: 16px;
-    height: 16px;
-    vertical-align: middle;
-    font-size: 8px;
-  }
-  .btn-prev {
-    background: url(../icons/svg/play-button-reverse.svg) no-repeat;
-  }
-  .btn-next {
-    background: url(../icons/svg/play-button.svg) no-repeat;
-  }
-  .calendar-date__current {
-    font-size: 14px;
-    color: #555555;
-    vertical-align: middle;
-    display: inline-block;
-    width: 120px;
-    text-align: center;
-  }
-}
-
-.container {
-  margin: 0 auto;
-  width: 1140px;
-}
-
-// Button styles
-
-.btn {
-  height: 24px;
-  border-radius: 3px;
-  margin: 0px 5px;
-  padding: 0 8px;
-  display: inline-block;
-}
-
-.btn-today {
-  height: 18px;
-  line-height: 18px;
-  vertical-align: middle;
-}
-
-.btn-default {
-  border: 1px solid #cccccc;
-  background: #ffffff;
-  color: #969696;
-}
-
-.btn-close {
-  display: block;
-  cursor: pointer;
-  color: #bbbbbb;
-  position: absolute;
-  right: 5px;
-  top: 5px;
-  width: 14px;
-  height: 14px;
-  font-size: 12px;
-  text-align: center;
-  line-height: 14px;
-}
-
 table,
 tr,
 td {
@@ -153,7 +35,7 @@ td {
   padding: 6px;
   font-size: 10px;
   color: #aaaaaa;
-  width: 14%;
+  width: 100px;
   cursor: pointer;
 }
 
@@ -181,18 +63,159 @@ td.current {
   background: #f4f4f4;
 }
 
+.header {
+  display: flex;
+  justify-content: space-between;
+  background: #f3f3f3;
+  height: 32px;
+  padding: 48px 40px 10px 40px;
+  border-bottom: 2px solid #dadada;
+
+  #manage-panel {
+    display: flex;
+    position: relative;
+    .btn-blue {
+      background: #0271c7;
+      color: #f2f2f2;
+      box-shadow: 1px 1px 1px #0068c1;
+      text-shadow: 1px 1px 2px #005094;
+      &:hover {
+        background: #0261c7;
+        color: #ffffff;
+      }
+    }
+    .add-form {
+      @include form(260px);
+      top: 25px;
+      left: 8px;
+    }
+  }
+  #search-panel {
+    position: relative;
+    .icon {
+      background: url(../icons/svg/magnifying-glass.svg) no-repeat;
+      width: 20px;
+      height: 25px;
+      display: inline-block;
+      vertical-align: middle;
+    }
+    .search-panel__input {
+      height: 22px;
+      width: 180px;
+      border-radius: 3px;
+      border: 1px solid #c7c7c7;
+      padding: 0 10px;
+      outline: none;
+    }
+    .search-panel__results {
+      display: none;
+      @include form(180px);
+      text-align: left;
+      top: 25px;
+      line-height: 1.2;
+      right: -20px;
+    }
+  }
+}
+
+.calendar-date {
+  padding: 20px 0 20px;
+  display: flex;
+  justify-content: space-between;
+  width: 220px;
+  .btn-prev,
+  .btn-next {
+    width: 18px;
+    height: 18px;
+    align-items: center;
+    font-size: 8px;
+    margin: 0;
+  }
+  .btn-prev {
+    background: url(../icons/svg/play-button-reverse.svg) 3px no-repeat;
+  }
+  .btn-next {
+    background: url(../icons/svg/play-button.svg) 4px no-repeat;
+  }
+  .calendar-date__current {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 14px;
+    color: #555555;
+    width: 105px;
+  }
+}
+
+.container {
+  margin: 0 auto;
+  width: 1140px;
+}
+
+// Button styles
+
+.btn {
+  display: inline-block;
+  height: 24px;
+  border-radius: 3px;
+  padding: 0 8px;
+  margin: 0 8px;
+}
+
+.btn-add {
+  display: inline-block;
+  border: 1px solid #cccccc;
+  background: #e2e2e2;
+  margin-left: 0;
+}
+
+.btn-clean {
+  display: inline-block;
+  border: 1px solid #cccccc;
+  background: #e2e2e2;
+  margin-left: 0;
+}
+
+.btn-today {
+  height: 18px;
+  line-height: 18px;
+  align-content: center;
+  margin: 0;
+}
+
+.btn-default {
+  border: 1px solid #cccccc;
+  background: #ffffff;
+  color: #969696;
+  margin: 0;
+}
+
+.btn-close {
+  display: block;
+  cursor: pointer;
+  color: #bbbbbb;
+  position: absolute;
+  right: 5px;
+  top: 5px;
+  width: 14px;
+  height: 14px;
+  font-size: 12px;
+  text-align: center;
+  line-height: 14px;
+}
+
 .add-form-advanced,
 .add-form-edit {
   margin-top: 10px;
+  width: 260px;
   padding: 20px;
+  position: absolute;
   background: #ffffff;
   border: 1px solid #cccccc;
-  width: 260px;
-  box-shadow: -1px 1px 3px #bbbbbb;
-  border-radius: 3px;
-  position: absolute;
   right: -320px;
   top: -32px;
+  border-radius: 3px;
+  box-shadow: -1px 1px 3px #bbbbbb;
   z-index: 2;
 }
 
@@ -203,19 +226,20 @@ td.current {
 }
 .add-form input,
 .add-form-advanced input {
-  width: 260px;
-  margin-bottom: 20px;
+  width: 240px;
+  margin: 5px 0 5px;
   height: 22px;
-  border: 1px solid #ccc;
+  padding-left: 8px;
+  border: 1px solid #cccccc;
   border-radius: 3px;
 }
 
 .add-form-advanced textarea,
 .add-form-edit textarea {
-  width: 260px;
-  margin-bottom: 20px;
-  height: 60px;
-  border: 1px solid #ccc;
+  border: 1px solid #cccccc;
+  width: 242px;
+  margin: 40px 0 20px;
+  height: 90px;
   border-radius: 3px;
 }
 
