--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -15,7 +15,6 @@ table,
 tr,
 td {
   border: 1px solid #dddddd;
-  border-spacing: 0px;
 }
 tbody {
   display: table-row-group;
@@ -42,16 +41,12 @@ td {
 th {
   text-align: left;
 }
-td {
-  position: relative;
-}
+
 td.active {
   background: #c2e4fe;
-  position: relative;
 }
 td.last {
   background: #efefef;
-  position: relative;
 }
 td.active.edit {
   outline: 2px solid #2196f3;
@@ -70,7 +65,6 @@ td.current {
   height: 32px;
   padding: 48px 40px 10px 40px;
   border-bottom: 2px solid #dadada;
-
   #manage-panel {
     display: flex;
     position: relative;
@@ -79,6 +73,7 @@ td.current {
       color: #f2f2f2;
       box-shadow: 1px 1px 1px #0068c1;
       text-shadow: 1px 1px 2px #005094;
+      margin-left: 0;
       &:hover {
         background: #0261c7;
         color: #ffffff;
@@ -91,6 +86,7 @@ td.current {
     }
   }
   #search-panel {
+    display: flex;
     position: relative;
     .icon {
       background: url(../icons/svg/magnifying-glass.svg) no-repeat;
@@ -162,13 +158,7 @@ td.current {
   margin: 0 8px;
 }
 
-.btn-add {
-  display: inline-block;
-  border: 1px solid #cccccc;
-  background: #e2e2e2;
-  margin-left: 0;
-}
-
+.btn-add,
 .btn-clean {
   display: inline-block;
   border: 1px solid #cccccc;
@@ -180,28 +170,23 @@ td.current {
   height: 18px;
   line-height: 18px;
   align-content: center;
-  margin: 0;
 }
 
 .btn-default {
   border: 1px solid #cccccc;
   background: #ffffff;
   color: #969696;
-  margin: 0;
 }
 
 .btn-close {
-  display: block;
   cursor: pointer;
   color: #bbbbbb;
   position: absolute;
-  right: 5px;
-  top: 5px;
-  width: 14px;
+  right: 9px;
+  top: 9px;
+  width: 8px;
   height: 14px;
-  font-size: 12px;
-  text-align: center;
-  line-height: 14px;
+  background: url(../icons/svg/cancel.svg) no-repeat;
 }
 
 .add-form-advanced,
